--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,11 @@
 <body>
     <div class="container mt-4" id="mainContianer" style="display: none;">
         <div class="row">
+            <div class="col-sm-12 text-center mb-3">
+                <h1>Tech Event Day</h1>
+            </div>
             <div class="col-sm-6">
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <div class="card-body">
                         <button type="button" class="btn btn-outline-primary" data-toggle="modal"
                             data-target="#addSpeaker"><i class="fa fa-microphone-alt"></i> Add
@@ -39,7 +42,7 @@
             </div>
             <div class="col-sm-6">
                 <div class="card" id="talksContainer">
-                    
+
                 </div>
             </div>
             <!-- Modal -->
